--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 4000
 MONGODB_URL = mongodb://127.0.0.1:27017/rippleydbecommerce?ssl=false&authSource=admin
 JWT_SECRET = rippleysecret
+MAIL_ID = argeliscarrero2002@gmail.com
+MP = lsvvbgflcpzfyvlm
