--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.1",
     "cloudinary": "^1.33.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
@@ -25,7 +26,8 @@
     "nodemailer": "^6.9.1",
     "path": "^0.12.7",
     "sharp": "^0.31.3",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
